--- a/JanjiXkcd/Scenes/Main/PageController.xib
+++ b/JanjiXkcd/Scenes/Main/PageController.xib
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainController" customModule="JanjiXkcd" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PageController" customModule="JanjiXkcd" customModuleProvider="target">
             <connections>
                 <outlet property="imageView" destination="4Lo-EO-yJc" id="yDk-Qq-rOP"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
